# fftw-cmake

./: CMakeLists.txt  config.h.cmake  config.h.in  libfftw.cmake
cmake/: CMakeLists.txt  bench.cmake  config.h.cmake  config.h.in  libfftw.cmake  macros.cmake  usexp-fftw-config.cmake
