include(flags OPTIONAL)
set(VER_MAJ 3)
set(VER_MIN 3)
set(VER_PT 3)
set(fftwroot ${fftw_SOURCE_DIR})
get_filename_component(fftwroot ${fftwroot} ABSOLUTE)
include(macros.cmake)
option(LINK_WITH_EXTERN_LIB "link with extern fftw lib" OFF)
set(externpro ${CMAKE_INSTALL_PREFIX})
if(MSVC)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  add_definitions(/Oi) # enable intrinsic functions
endif()
set(precisions double float long-double)
foreach(prec ${precisions})
  set(BENCHFFT_LDOUBLE)
  set(FFTW_LDOUBLE)
  set(BENCHFFT_SINGLE)
  set(FFTW_SINGLE)
  # NOTE: QUAD not yet supported
  set(BENCHFFT_QUAD)
  set(FFTW_QUAD)
  if(${prec} MATCHES "float")
    set(BENCHFFT_SINGLE 1)
    set(FFTW_SINGLE 1)
    set(pr "f")
  elseif(${prec} MATCHES "long-double")
    set(BENCHFFT_LDOUBLE 1)
    set(FFTW_LDOUBLE 1)
    set(pr "l")
  elseif(${prec} MATCHES "double")
    set(pr "")
  endif()
  set(lib_name fftw${VER_MAJ}${pr})
  set(cfg_dir ${CMAKE_BINARY_DIR}/${lib_name})
  set(exe_name bench${pr})
  if(NOT EXISTS ${cfg_dir})
    execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${cfg_dir})
  endif()
  include(config.h.cmake)
  if(LINK_WITH_EXTERN_LIB)
    find_path(fftw${pr}_LIBDIR
      NAMES
        lib${lib_name}.a
      PATHS
        ~/src/sdlExtern/SunOS/lib
        ${externpro}/lib${NUMBITS}
      DOC "fftw${pr} library directory"
      )
    if(NOT fftw${pr}_LIBDIR)
      message(FATAL_ERROR "fftw${pr} lib not found")
    endif()
    link_directories(${fftw${pr}_LIBDIR})
  else()
    if(MSVC)
      set(lib_name libfftw${VER_MAJ}${pr}-${VER_MIN})
    endif()
    include(libfftw.cmake)
  endif()
  include(bench.cmake)
endforeach()
if(GENERATE_CSCOPE)
  generate_cscope_db()
endif()
install(FILES ${fftwroot}/api/fftw3.h DESTINATION include/fftw${VER_MAJ})
